syntax = "proto3";

import "gogoproto/gogo.proto";

// ConfigV1 specifies v1 of the pachyderm config (June 30 2017 - present)
// DO NOT change or remove field numbers from this proto, as if you do, v1 user
// configs will become unparseable.
message ConfigV1 {
    string pachd_address = 2;
}

// Config specifies the pachyderm config. Different versions of the pachyderm
// config are specified as optional subfields of this message. DO NOT change or
// remove field numbers from this proto, otherwise ALL pachyderm user configs
// will fail to parse.
message Config {
    string user_id = 1 [(gogoproto.customname) = "UserID"];

    // Configuration options. Exactly one of these fields should be set
    // (depending on which version of the config is being used)
    ConfigV1 v1 = 2;
}
